fix deadlock. other review stuff

--- a/client/webserver/site/src/css/mmsettings.scss
+++ b/client/webserver/site/src/css/mmsettings.scss
@@ -178,6 +178,12 @@ div[data-handler=mmsettings] {
         }
       }
     }
+
+    .reconfig {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
   }
 }
 
