--- a/client/webserver/site/src/css/wallets.scss
+++ b/client/webserver/site/src/css/wallets.scss
@@ -80,13 +80,8 @@
     }
   }
 
-  #sendReceive > button {
-    border-radius: 3px;
-  }
-
   table#balanceTable {
     td {
-      padding: 2px 0;
       line-height: 1;
     }
 
@@ -94,11 +89,41 @@
       text-align: right;
     }
 
-    tr.first-other {
-      border-top: 1px solid $light_border_color;
+    tr.itemized > td {
+      padding-bottom: 0.25rem;
+    }
 
-      & > td {
-        padding-top: 5px;
+    tr:not(.sub, :first-child) td {
+      padding-top: 0.5rem;
+    }
+
+    tr:not(.sub) {
+      font-size: 17px;
+
+      .ico-info {
+        font-size: 14px;
+      }
+    }
+
+    tr.sub {
+      font-size: 14px;
+
+      &.last > td:first-child::before {
+        content: '└─ ',
+      }
+
+      & > td:first-child::before {
+        content: '├─ ',
+      }
+
+      & > td:last-child {
+        @extend .brdrright;
+
+        padding-right: 0.5rem;
+      }
+
+      .ico-info {
+        font-size: 12px;
       }
     }
   }
@@ -354,6 +379,10 @@
       table#walletInfoTable {
         width: auto;
       }
+    }
+
+    #sendReceive {
+      border-bottom: none;
     }
   }
 
