app: Update UI to support bond updaters
The transaction details popup now shows change and replaced bonds. Also
in many placed the bond amount was multiplied by two to handle the bond
reserves requirement which bond updaters do not have, so this needed to
be updated.

--- a/client/webserver/site/src/css/wallets.scss
+++ b/client/webserver/site/src/css/wallets.scss
@@ -370,7 +370,11 @@
   transition: color 1s ease;
 }
 
-#txDetailsBondSection, #txDetailsRecipientSection, #txDetailsNonceSection {
+#txDetailsBondSection,
+#txDetailsRecipientSection,
+#txDetailsNonceSection,
+#txDetailsChangeBondSection,
+#txDetailsReplacedBondsSection {
   margin-top: 10px;
   padding-top: 10px;
   border-top: 1px solid #777;
