add dcr recipient and mempool txs

--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -135,14 +135,11 @@
 <div id="unifiedReceivers" class="d-flex align-items-stretch">
   <div id="unifiedReceiverTmpl" class="p-1 me-2 hoverbg lh1 fs15 pointer brdr selectable"></div>
 </div>
-<div id="newDepAddrBttnBox" class="flex-stretch-column">
-  <button id="newDepAddrBttn" type="button" class="feature">[[[New Address]]]</button>
-</div>
-<div id="addrUsed" class="mt-3 fs15 grey">
+<div id="addrUsed" class="my-1 text-center fs15 grey lh1 text-warning">
   [[[address has been used]]]
 </div>
-<div class="my-3">
-  <button id="newDepAddrBttn" type="button" class=" px-2 justify-content-center fs15 bg2 selected">[[[New Deposit Address]]]</button>
+<div id="newDepAddrBttnBox" class="flex-stretch-column">
+  <button id="newDepAddrBttn" type="button" class="feature">[[[New Address]]]</button>
 </div>
 <div class="fs15 text-center d-hide text-danger text-break" id="depositErr"></div>
 {{end}}
