switch to a BIP39-based, birthday-encoding mnemonic seed
15 bip39 words encoding 18 bytes of entropy, 2 bytes of birthday,
and 5 bits of checksum.

--- a/client/webserver/site/src/html/settings.tmpl
+++ b/client/webserver/site/src/html/settings.tmpl
@@ -142,7 +142,8 @@
       <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="fs18 sans-light text-center mb-2">[[[dont_share]]]</div>
       <div class="my-2 p-2 flex-center">
-        <pre class="fs18 mono mx-auto select-all" id="seedDiv"></pre>
+        <pre class="fs18 mono mx-auto select-all" id="legacySeed"></pre>
+        <div class="fs18 mono mx-auto select-all" id="mnemonic"></div>
       </div>
     </form>
 
