--- a/client/webserver/site/src/html/init.tmpl
+++ b/client/webserver/site/src/html/init.tmpl
@@ -104,7 +104,7 @@
       <div id="sbSeed" class="d-hide">
         <div class="fs18 mt-2">[[[save_seed_instructions]]]</div>
         <div class="my-2 p-2 flex-center">
-          <pre class="fs18 mono mx-auto select-all" id="seedDiv"></pre>
+          <div class="fs18 mono mx-auto select-all" id="mnemonic"></div>
         </div>
         <button id="seedAck" class="selected">[[[Done]]]</button>
       </div>
